# nsu-tasks

./: .gitignore  .gitmodules  Makefile  README.md  boba.py  boba_sample.py  commands.py  constructors.py  data_classes.py  database.py  database_test.py  db_classes.py  db_request.py  empire.py  indiana.py  indiana_sample.py  indiana_test.py  shell.py  shell_test.py  solution.py
02/: 2.c
03/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c
04/: 2.c  3.c
05/: 0.c  1.c  3.c
06/: 0.c
07/: 1.c
08/: 1.c  2.c
09/: 1.c  2.c  3.c  4.c  5.c
10/: 1.c  2.c  3.c  4.c
Algo/: 1.py  10.py  13.cpp  14.py  15.cpp  18.py  2.py  21.py  28.py  3.txt  31.py  4.py  9.py  README.md
Asm/: 11.asm  12.asm  12_test.asm  13.asm  14.asm  14_test.asm  15.asm  16.asm  16_test.py  2.asm  3.asm  4.asm  5.asm  6.asm  7.asm  8.asm  9.asm  README.md  aboba  other_file  testLib.asm  things.asm
CPP/: CMakeLists.txt  nstt_10.cpp  nstt_10_test.cpp  nstt_11.cpp  nstt_11_test.cpp  nstt_13.cpp  nstt_1349.cpp  nstt_134912.cpp  nstt_134912_test.cpp  nstt_1349_test.cpp  nstt_13_test.cpp  nstt_1_treap.cpp  nstt_2.cpp  nstt_2_test.cpp  nstt_3.cpp  nstt_3_other.cpp  nstt_4.cpp  nstt_5.cpp  nstt_5_test.cpp  nstt_6.cpp  nstt_6_test.cpp  nstt_7.cpp  nstt_7_test.cpp  nstt_8.cpp  nstt_8_test.cpp  tests.cpp  treap.cpp
CPP-OOP/: treap.cpp
Python/: 10_1.py  10_2.py  11.py  12_2.py  13.py  14.c  4_1.py  5_1.py
minitasks/: 1.py  10.py  10_1.py  10_2.py  10_3.py  11.py  12_1.py  14.c  14.py  14_setup.py  15.ipynb  2.py  3.py  4.py  4_2.py  5_2.py  6.py  7.py  8.py  9.py
tests/: 10-input.txt  11.in  3-input.txt  (+2 more)
(+151 files in other folders)
